feat: фильтры и шапка закончены
# Conflicts:
#	src/components/SelectSection/SelectSection.tsx
#	src/pages/GamesPage.css
#	src/pages/GamesPage.tsx
#	src/shared/TextField/TextField.css
#	src/shared/TextField/TextField.tsx
#	src/shared/styles/global.css

--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -4,7 +4,7 @@
   --colorYellowButton: #f0da7d;
   --colorYellowButtonHover: #f5e8b1;
   --colorBorderDarkGold: #ba8e47;
-  --colorGray: rgba(255, 255, 255, 0.5);
+  --colorGray: #1c1c1c;
   --colorDisabledOrTransparent: #696969;
   --colorRed: #ff0000;
 }
