--- a/src/pages/GamesPage.css
+++ b/src/pages/GamesPage.css
@@ -1,21 +1,8 @@
-.selectSection {
+.games-page-container {
   display: flex;
-  flex: 2;
-  padding: 20px;
-  gap: 20px;
-  background-color: var(--colorGray);
-  border-radius: 10px;
-  height: 100%;
-  box-sizing: border-box;
-}
-
-.inputSection {
-  display: flex;
-  flex: 1;
   flex-direction: column;
   padding: 10px 20px;
-  background-color: var(--colorGray);
-  border-radius: 10px;
   height: 100%;
-  box-sizing: border-box;
+  overflow-y: auto;
+  gap: 20px;
 }
